# powersync-kotlin

./: .editorconfig  .gitignore  CHANGELOG.md  Package.swift  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: KMMBridge-publish.yml  deploy-swit.yml  deploy.yml  docs-deploy.yml  gradle.yml  prebuild_assets.yml  publish-swift.yml  test.yml
PowerSync/: README.md  build.gradle.kts  gradle.properties  powersync.podspec
PowerSyncKotlin/: README.md  build.gradle.kts  powersync.podspec
allshared/: allshared.podspec  build.gradle.kts  gradle.properties
allshared/src/main/: AndroidManifest.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
attachments/: build.gradle.kts
common/: README.md  build.gradle.kts  gradle.properties
common/src/watchosMain/: powersync_static.h
compose/: build.gradle.kts  gradle.properties
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
connectors/: README.md  build.gradle.kts  gradle.properties
connectors/supabase/: build.gradle.kts  gradle.properties
convention-plugins/: build.gradle.kts  settings.gradle.kts
core/: .gitignore  PowerSyncCore.podspec  README.md  build.gradle.kts  core.podspec  gradle.properties  proguard-rules.pro
core-test/: .gitignore  build.gradle.kts
core-tests-android/: build.gradle.kts  proguard-rules.pro
core-tests-android/src/main/: AndroidManifest.xml
core/src/androidMain/cpp/: CMakeLists.txt  sqlite_bindings.cpp
core/src/include/: PowersyncSqlite.h  powersync-sqlite-core.h
core/src/jvmMain/cpp/: CMakeLists.txt  build.sh  sqlite_bindings.cpp
demos/android-supabase-todolist/: README.md  build.gradle.kts  local.properties.example  settings.gradle.kts
demos/android-supabase-todolist/app/: build.gradle.kts
demos/android-supabase-todolist/gradle/: libs.versions.toml
demos/hello-powersync/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
demos/hello-powersync/composeApp/: build.gradle.kts  composeApp.podspec
demos/hello-powersync/desktop/: build.gradle.kts
demos/hello-powersync/gradle/: libs.versions.toml
demos/hello-powersync/iosApp/: Podfile
demos/self-host-sync-streams/: README.md  build.gradle.kts
demos/supabase-todolist/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
demos/supabase-todolist/androidApp/: build.gradle.kts
demos/supabase-todolist/androidBackgroundSync/: build.gradle.kts
demos/supabase-todolist/desktopApp/: build.gradle.kts
demos/supabase-todolist/docs/: BackgroundSync.md
demos/supabase-todolist/gradle/: libs.versions.toml
demos/supabase-todolist/iosApp/: Podfile
demos/supabase-todolist/shared/: build.gradle.kts
dialect/: README.md  build.gradle
docs/: MavenCentral.md  Release.md
docs/assets/: doc-styles.css
drivers/: README.md
drivers/common/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
integrations/room/: README.md  build.gradle.kts  gradle.properties
integrations/sqldelight/: README.md  build.gradle.kts  gradle.properties
integrations/sqldelight-test-database/: build.gradle.kts
integrations/supabase/: README.md  build.gradle.kts
internal/PowerSyncKotlin/: Package.swift  build.gradle.kts  powersync.podspec
internal/download-core-extension/: build.gradle.kts
internal/ktor-client-darwin/: LICENSE  README.md  build.gradle.kts
internal/prebuild-binaries/: README.md  build.gradle.kts  download_glibc.sh  download_llvm_mingw.sh
internal/prebuild-binaries/jni/: CMakeLists.txt
internal/sqlite3mcandroid/: build.gradle.kts  consumer-rules.pro  gradle.properties
internal/testutils/: build.gradle.kts
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
persistence/: build.gradle.kts  gradle.properties
plugins/: settings.gradle.kts
plugins/build-plugin/: build.gradle.kts
plugins/sonatype/: build.gradle.kts
powersync-sqlite-core.xcframework/: Info.plist
powersync-sqlite-core.xcframework/ios-arm64/powersync-sqlite-core.framework/: powersync-sqlite-core
powersync-swift/: gradle.properties  powersync.podspec
powersyncswift/: build.gradle.kts  gradle.properties  powersync.podspec
samples/hello-powersync/: build.gradle.kts  gradle.properties  settings.gradle.kts
shared/: build.gradle.kts
sqlite3multipleciphers/: README.md  build.gradle.kts  gradle.properties
sqlite3multipleciphers/src/jni/: CMakeLists.txt  Dockerfile  sqlite_bindings.cpp
static-sqlite-driver/: README.md  build.gradle.kts  clang.properties  gradle.properties
(+769 files in other folders)
